<resources>
    <string name="app_name">pattern_02</string>
    <string name="eucoelomate">Eucoelomate</string>
    <string name="settings">settings</string>
    <string name="add_a_component">Add a Component</string>
    <string name="random_id_contact">Random Id Contact</string>
    <string name="icon">icon</string>
    <string name="enter_id_here">Enter Id Here</string>
    <string name="enter">Enter</string>
    <string name="back_to_home">Back Home</string>
    <string name="wowowowow">Wowowowow</string>
</resources>