<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/c_a_id_manager_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="@color/white"
        android:theme="@style/Theme.MaterialComponents.Light">
        <RelativeLayout
            android:id="@+id/c_a_id_manager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/c_a_id_manager_entry"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center">

        <RelativeLayout
                android:id="@+id/c_a_id_manager_port_01"
                android:layout_width="60dp"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/c_a_id_manager_port_01_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/write"
                    android:contentDescription="@string/icon" />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/c_a_id_manager_port_02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_toEndOf="@id/c_a_id_manager_port_01">
                <EditText
                    android:id="@+id/c_a_id_manager_port_02_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Blue6"
                    android:hint="@string/enter_id_here"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:autofillHints="false"
                    android:inputType="text" />
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/c_a_id_manager_port_submission"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/TextColor"
            android:layout_below="@id/c_a_id_manager_entry">
            <Button
                android:id="@+id/c_a_id_manager_port_submission_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="italic|bold"
                android:textSize="19sp"
                android:textAlignment="center"
                android:gravity="center"
                android:backgroundTint="@color/Blue6"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/c_a_id_manager_port_back"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/TextColor"
        android:layout_below="@id/c_a_id_manager_port_submission">

        <Button
            android:id="@+id/c_a_id_manager_port_back_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="italic|bold"
            android:textSize="19sp"
            android:textAlignment="center"
            android:gravity="center"
            android:backgroundTint="@color/Blue6"/>
    </RelativeLayout>
  </RelativeLayout>

  </com.google.android.material.card.MaterialCardView>
</RelativeLayout>