<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Blue6"
    android:layout_gravity="center">
    <RelativeLayout
        android:id="@+id/b_a_main_view_port_01"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:elevation="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eucoelomate"
            android:textStyle="italic|bold"
            android:textColor="@color/TextColor2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:gravity="center"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/b_a_main_view_port_02"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/b_a_main_view_port_01"
        android:elevation="8dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/b_a_main_view_port_02_img"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/settings"
            android:contentDescription="@string/settings" />
        <TextView
            android:id="@+id/b_a_main_view_port_02_setting_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/b_a_main_view_port_02_img"
            android:text="@string/settings"
            android:textSize="19sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/Green6"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/b_a_main_view_port_03"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/b_a_main_view_port_02">

     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="3dp"
         app:cardCornerRadius="20dp"
         app:cardUseCompatPadding="true"
         android:theme="@style/Theme.MaterialComponents.Light">
        <TextView
          android:id="@+id/b_a_main_view_port_03_tv"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/add_a_component"
          android:textAlignment="center"
          android:gravity="center"
          android:textStyle="bold"
          android:textColor="@color/TextColor2"
          android:textAllCaps="false"
          android:textSize="27sp"
          android:background="@color/white"
          />
     </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/b_a_main_view_port_04"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/b_a_main_view_port_03"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/b_a_main_view_port_04_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
</RelativeLayout>